# clc-stackage

./: .gitignore  README.md  cabal.project  clc-stackage.cabal  dev.md  excluded_pkgs.json  flake.nix  package_index.jsonc
.github/: build.sh
.github/scripts/: batch_index.sh  build.sh  build_default.sh  build_sequential.sh  dry_run.sh  install.sh
.github/workflows/: ci.yaml  ci_nightly.yaml
sequential/: sequential.cabal
sequential/app/: Main.hs
sequential/src/Sequential/: Args.hs  Cabal.hs  Env.hs  Report.hs  Runner.hs  Utils.hs
sequential/src/Sequential/Cabal/: CabalData.hs  Package.hs  Parser.hs
sequential/test/unit/: Main.hs
sequential/test/unit/Unit/: Prelude.hs
sequential/test/unit/Unit/Sequential/: Env.hs  Report.hs
sequential/test/unit/data/: report.json  result.json
src/CLC/Stackage/: Parser.hs  Runner.hs
src/CLC/Stackage/Parser/: API.hs  Utils.hs
src/CLC/Stackage/Parser/API/: CabalConfig.hs  Common.hs  JSON.hs
src/CLC/Stackage/Runner/: Args.hs  Env.hs
src/CLC/Stackage/Utils/: Logging.hs  Package.hs
src/builder/CLC/Stackage/Builder/: Batch.hs  Env.hs  Process.hs  Writer.hs
src/runner/CLC/Stackage/: Runner.hs
src/runner/CLC/Stackage/Runner/: Env.hs  Report.hs
test/functional/: Main.hs
test/unit/Unit/: Prelude.hs
test/unit/Unit/CLC/Stackage/Parser/: API.hs
